openshift/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: image-registry.openshift-image-registry.svc:5000/ecommerce-capstone/user-service:latest
          ports:
            - containerPort: 8083
          resources:
            requests: { cpu: 100m, memory: 384Mi }
            limits: { cpu: 500m, memory: 512Mi }
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8083 }
            initialDelaySeconds: 40
            periodSeconds: 20
